Adjustments for VC2017 and newer version of TGUI

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ game/
 build/vc2015/bomberman.VC.db
 build/vc2015/bomberman.VC.VC.opendb
 build/vc2015/.vs/bomberman/v14/.suo
+/build/vc2017/.vs/bomberman/v15/Browse.VC.db
+/build/vc2017/.vs/bomberman/v15/.suo
+/build/vc2017/bomberman.v12.suo
+/build/vc2017/.vs/bomberman/v15/Browse.VC.opendb
