--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ build/vc2015/.vs/bomberman/v14/.suo
 /build/vc2017/.vs/bomberman/v15/.suo
 /build/vc2017/bomberman.v12.suo
 /build/vc2017/.vs/bomberman/v15/Browse.VC.opendb
+/build/vc2019/.vs
