--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -65,3 +65,258 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+
+[preset.1]
+
+name="macOS"
+platform="macOS"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="exclude"
+export_files=PackedStringArray("res://addons/gut/cli/change_project_warnings.gd", "res://addons/gut/cli/gut_cli.gd", "res://addons/gut/cli/optparse.gd", "res://addons/gut/fonts/AnonymousPro-Bold.ttf", "res://addons/gut/fonts/AnonymousPro-BoldItalic.ttf", "res://addons/gut/fonts/AnonymousPro-Italic.ttf", "res://addons/gut/fonts/AnonymousPro-Regular.ttf", "res://addons/gut/fonts/CourierPrime-Bold.ttf", "res://addons/gut/fonts/CourierPrime-BoldItalic.ttf", "res://addons/gut/fonts/CourierPrime-Italic.ttf", "res://addons/gut/fonts/CourierPrime-Regular.ttf", "res://addons/gut/fonts/LobsterTwo-Bold.ttf", "res://addons/gut/fonts/LobsterTwo-BoldItalic.ttf", "res://addons/gut/fonts/LobsterTwo-Italic.ttf", "res://addons/gut/fonts/LobsterTwo-Regular.ttf", "res://addons/gut/gui/arrow.png", "res://addons/gut/gui/BottomPanelShortcuts.gd", "res://addons/gut/gui/BottomPanelShortcuts.tscn", "res://addons/gut/gui/editor_globals.gd", "res://addons/gut/gui/GutBottomPanel.gd", "res://addons/gut/gui/GutBottomPanel.tscn", "res://addons/gut/gui/GutControl.gd", "res://addons/gut/gui/GutControl.tscn", "res://addons/gut/gui/GutRunner.gd", "res://addons/gut/gui/GutRunner.tscn", "res://addons/gut/gui/GutSceneTheme.tres", "res://addons/gut/gui/gut_config_gui.gd", "res://addons/gut/gui/gut_gui.gd", "res://addons/gut/gui/gut_user_preferences.gd", "res://addons/gut/gui/MinGui.tscn", "res://addons/gut/gui/NormalGui.tscn", "res://addons/gut/gui/OutputText.gd", "res://addons/gut/gui/OutputText.tscn", "res://addons/gut/gui/panel_controls.gd", "res://addons/gut/gui/play.png", "res://addons/gut/gui/ResizeHandle.gd", "res://addons/gut/gui/ResizeHandle.tscn", "res://addons/gut/gui/ResultsTree.gd", "res://addons/gut/gui/ResultsTree.tscn", "res://addons/gut/gui/RunAtCursor.gd", "res://addons/gut/gui/RunAtCursor.tscn", "res://addons/gut/gui/RunResults.gd", "res://addons/gut/gui/RunResults.tscn", "res://addons/gut/gui/run_from_editor.gd", "res://addons/gut/gui/run_from_editor.tscn", "res://addons/gut/gui/script_text_editor_controls.gd", "res://addons/gut/gui/Settings.tscn", "res://addons/gut/gui/ShortcutButton.gd", "res://addons/gut/gui/ShortcutButton.tscn", "res://addons/gut/images/Folder.svg", "res://addons/gut/images/green.png", "res://addons/gut/images/red.png", "res://addons/gut/images/Script.svg", "res://addons/gut/images/yellow.png", "res://addons/gut/autofree.gd", "res://addons/gut/awaiter.gd", "res://addons/gut/collected_script.gd", "res://addons/gut/collected_test.gd", "res://addons/gut/comparator.gd", "res://addons/gut/compare_result.gd", "res://addons/gut/diff_formatter.gd", "res://addons/gut/diff_tool.gd", "res://addons/gut/doubler.gd", "res://addons/gut/double_tools.gd", "res://addons/gut/dynamic_gdscript.gd", "res://addons/gut/gut.gd", "res://addons/gut/GutScene.gd", "res://addons/gut/GutScene.tscn", "res://addons/gut/gut_cmdln.gd", "res://addons/gut/gut_config.gd", "res://addons/gut/gut_loader.gd", "res://addons/gut/gut_loader_the_scene.tscn", "res://addons/gut/gut_plugin.gd", "res://addons/gut/gut_to_move.gd", "res://addons/gut/gut_vscode_debugger.gd", "res://addons/gut/hook_script.gd", "res://addons/gut/icon.png", "res://addons/gut/inner_class_registry.gd", "res://addons/gut/input_factory.gd", "res://addons/gut/input_sender.gd", "res://addons/gut/junit_xml_export.gd", "res://addons/gut/lazy_loader.gd", "res://addons/gut/logger.gd", "res://addons/gut/method_maker.gd", "res://addons/gut/one_to_many.gd", "res://addons/gut/orphan_counter.gd", "res://addons/gut/parameter_factory.gd", "res://addons/gut/parameter_handler.gd", "res://addons/gut/printers.gd", "res://addons/gut/result_exporter.gd", "res://addons/gut/script_parser.gd", "res://addons/gut/signal_watcher.gd", "res://addons/gut/source_code_pro.fnt", "res://addons/gut/spy.gd", "res://addons/gut/strutils.gd", "res://addons/gut/stubber.gd", "res://addons/gut/stub_params.gd", "res://addons/gut/summary.gd", "res://addons/gut/test.gd", "res://addons/gut/test_collector.gd", "res://addons/gut/thing_counter.gd", "res://addons/gut/UserFileViewer.gd", "res://addons/gut/UserFileViewer.tscn", "res://addons/gut/utils.gd", "res://addons/gut/version_conversion.gd", "res://addons/gut/version_numbers.gd", "res://addons/gut/warnings_manager.gd", "res://test/unit/test_game_data.gd", "res://test/unit/test_maps.gd", "res://test/unit/test_network.gd", "res://test/unit/test_rules.gd", "res://test/unit/test_types.gd")
+include_filter="assets/maps/*"
+exclude_filter=""
+export_path="bin/neuronic-bomberman-mac.zip"
+patches=PackedStringArray()
+encryption_include_filters=""
+encryption_exclude_filters=""
+seed=0
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.1.options]
+
+export/distribution_type=1
+binary_format/architecture="universal"
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+application/icon="uid://c48kdaut4xv5v"
+application/icon_interpolation=4
+application/bundle_identifier="com.fredericvanmol.neuronic-bomberman"
+application/signature=""
+application/app_category="Games"
+application/short_version=""
+application/version=""
+application/copyright=""
+application/copyright_localized={}
+application/min_macos_version_x86_64="10.12"
+application/min_macos_version_arm64="11.00"
+application/export_angle=0
+display/high_res=true
+application/additional_plist_content=""
+xcode/platform_build="14C18"
+xcode/sdk_version="13.1"
+xcode/sdk_build="22C55"
+xcode/sdk_name="macosx13.1"
+xcode/xcode_version="1420"
+xcode/xcode_build="14C18"
+codesign/codesign=1
+codesign/installer_identity=""
+codesign/apple_team_id=""
+codesign/identity=""
+codesign/entitlements/custom_file=""
+codesign/entitlements/allow_jit_code_execution=false
+codesign/entitlements/allow_unsigned_executable_memory=false
+codesign/entitlements/allow_dyld_environment_variables=false
+codesign/entitlements/disable_library_validation=false
+codesign/entitlements/audio_input=false
+codesign/entitlements/camera=false
+codesign/entitlements/location=false
+codesign/entitlements/address_book=false
+codesign/entitlements/calendars=false
+codesign/entitlements/photos_library=false
+codesign/entitlements/apple_events=false
+codesign/entitlements/debugging=false
+codesign/entitlements/app_sandbox/enabled=false
+codesign/entitlements/app_sandbox/network_server=false
+codesign/entitlements/app_sandbox/network_client=false
+codesign/entitlements/app_sandbox/device_usb=false
+codesign/entitlements/app_sandbox/device_bluetooth=false
+codesign/entitlements/app_sandbox/files_downloads=0
+codesign/entitlements/app_sandbox/files_pictures=0
+codesign/entitlements/app_sandbox/files_music=0
+codesign/entitlements/app_sandbox/files_movies=0
+codesign/entitlements/app_sandbox/files_user_selected=0
+codesign/entitlements/app_sandbox/helper_executables=[]
+codesign/entitlements/additional=""
+codesign/custom_options=PackedStringArray()
+notarization/notarization=0
+privacy/microphone_usage_description=""
+privacy/microphone_usage_description_localized={}
+privacy/camera_usage_description=""
+privacy/camera_usage_description_localized={}
+privacy/location_usage_description=""
+privacy/location_usage_description_localized={}
+privacy/address_book_usage_description=""
+privacy/address_book_usage_description_localized={}
+privacy/calendar_usage_description=""
+privacy/calendar_usage_description_localized={}
+privacy/photos_library_usage_description=""
+privacy/photos_library_usage_description_localized={}
+privacy/desktop_folder_usage_description=""
+privacy/desktop_folder_usage_description_localized={}
+privacy/documents_folder_usage_description=""
+privacy/documents_folder_usage_description_localized={}
+privacy/downloads_folder_usage_description=""
+privacy/downloads_folder_usage_description_localized={}
+privacy/network_volumes_usage_description=""
+privacy/network_volumes_usage_description_localized={}
+privacy/removable_volumes_usage_description=""
+privacy/removable_volumes_usage_description_localized={}
+privacy/tracking_enabled=false
+privacy/tracking_domains=PackedStringArray()
+privacy/collected_data/name/collected=false
+privacy/collected_data/name/linked_to_user=false
+privacy/collected_data/name/used_for_tracking=false
+privacy/collected_data/name/collection_purposes=0
+privacy/collected_data/email_address/collected=false
+privacy/collected_data/email_address/linked_to_user=false
+privacy/collected_data/email_address/used_for_tracking=false
+privacy/collected_data/email_address/collection_purposes=0
+privacy/collected_data/phone_number/collected=false
+privacy/collected_data/phone_number/linked_to_user=false
+privacy/collected_data/phone_number/used_for_tracking=false
+privacy/collected_data/phone_number/collection_purposes=0
+privacy/collected_data/physical_address/collected=false
+privacy/collected_data/physical_address/linked_to_user=false
+privacy/collected_data/physical_address/used_for_tracking=false
+privacy/collected_data/physical_address/collection_purposes=0
+privacy/collected_data/other_contact_info/collected=false
+privacy/collected_data/other_contact_info/linked_to_user=false
+privacy/collected_data/other_contact_info/used_for_tracking=false
+privacy/collected_data/other_contact_info/collection_purposes=0
+privacy/collected_data/health/collected=false
+privacy/collected_data/health/linked_to_user=false
+privacy/collected_data/health/used_for_tracking=false
+privacy/collected_data/health/collection_purposes=0
+privacy/collected_data/fitness/collected=false
+privacy/collected_data/fitness/linked_to_user=false
+privacy/collected_data/fitness/used_for_tracking=false
+privacy/collected_data/fitness/collection_purposes=0
+privacy/collected_data/payment_info/collected=false
+privacy/collected_data/payment_info/linked_to_user=false
+privacy/collected_data/payment_info/used_for_tracking=false
+privacy/collected_data/payment_info/collection_purposes=0
+privacy/collected_data/credit_info/collected=false
+privacy/collected_data/credit_info/linked_to_user=false
+privacy/collected_data/credit_info/used_for_tracking=false
+privacy/collected_data/credit_info/collection_purposes=0
+privacy/collected_data/other_financial_info/collected=false
+privacy/collected_data/other_financial_info/linked_to_user=false
+privacy/collected_data/other_financial_info/used_for_tracking=false
+privacy/collected_data/other_financial_info/collection_purposes=0
+privacy/collected_data/precise_location/collected=false
+privacy/collected_data/precise_location/linked_to_user=false
+privacy/collected_data/precise_location/used_for_tracking=false
+privacy/collected_data/precise_location/collection_purposes=0
+privacy/collected_data/coarse_location/collected=false
+privacy/collected_data/coarse_location/linked_to_user=false
+privacy/collected_data/coarse_location/used_for_tracking=false
+privacy/collected_data/coarse_location/collection_purposes=0
+privacy/collected_data/sensitive_info/collected=false
+privacy/collected_data/sensitive_info/linked_to_user=false
+privacy/collected_data/sensitive_info/used_for_tracking=false
+privacy/collected_data/sensitive_info/collection_purposes=0
+privacy/collected_data/contacts/collected=false
+privacy/collected_data/contacts/linked_to_user=false
+privacy/collected_data/contacts/used_for_tracking=false
+privacy/collected_data/contacts/collection_purposes=0
+privacy/collected_data/emails_or_text_messages/collected=false
+privacy/collected_data/emails_or_text_messages/linked_to_user=false
+privacy/collected_data/emails_or_text_messages/used_for_tracking=false
+privacy/collected_data/emails_or_text_messages/collection_purposes=0
+privacy/collected_data/photos_or_videos/collected=false
+privacy/collected_data/photos_or_videos/linked_to_user=false
+privacy/collected_data/photos_or_videos/used_for_tracking=false
+privacy/collected_data/photos_or_videos/collection_purposes=0
+privacy/collected_data/audio_data/collected=false
+privacy/collected_data/audio_data/linked_to_user=false
+privacy/collected_data/audio_data/used_for_tracking=false
+privacy/collected_data/audio_data/collection_purposes=0
+privacy/collected_data/gameplay_content/collected=false
+privacy/collected_data/gameplay_content/linked_to_user=false
+privacy/collected_data/gameplay_content/used_for_tracking=false
+privacy/collected_data/gameplay_content/collection_purposes=0
+privacy/collected_data/customer_support/collected=false
+privacy/collected_data/customer_support/linked_to_user=false
+privacy/collected_data/customer_support/used_for_tracking=false
+privacy/collected_data/customer_support/collection_purposes=0
+privacy/collected_data/other_user_content/collected=false
+privacy/collected_data/other_user_content/linked_to_user=false
+privacy/collected_data/other_user_content/used_for_tracking=false
+privacy/collected_data/other_user_content/collection_purposes=0
+privacy/collected_data/browsing_history/collected=false
+privacy/collected_data/browsing_history/linked_to_user=false
+privacy/collected_data/browsing_history/used_for_tracking=false
+privacy/collected_data/browsing_history/collection_purposes=0
+privacy/collected_data/search_hhistory/collected=false
+privacy/collected_data/search_hhistory/linked_to_user=false
+privacy/collected_data/search_hhistory/used_for_tracking=false
+privacy/collected_data/search_hhistory/collection_purposes=0
+privacy/collected_data/user_id/collected=false
+privacy/collected_data/user_id/linked_to_user=false
+privacy/collected_data/user_id/used_for_tracking=false
+privacy/collected_data/user_id/collection_purposes=0
+privacy/collected_data/device_id/collected=false
+privacy/collected_data/device_id/linked_to_user=false
+privacy/collected_data/device_id/used_for_tracking=false
+privacy/collected_data/device_id/collection_purposes=0
+privacy/collected_data/purchase_history/collected=false
+privacy/collected_data/purchase_history/linked_to_user=false
+privacy/collected_data/purchase_history/used_for_tracking=false
+privacy/collected_data/purchase_history/collection_purposes=0
+privacy/collected_data/product_interaction/collected=false
+privacy/collected_data/product_interaction/linked_to_user=false
+privacy/collected_data/product_interaction/used_for_tracking=false
+privacy/collected_data/product_interaction/collection_purposes=0
+privacy/collected_data/advertising_data/collected=false
+privacy/collected_data/advertising_data/linked_to_user=false
+privacy/collected_data/advertising_data/used_for_tracking=false
+privacy/collected_data/advertising_data/collection_purposes=0
+privacy/collected_data/other_usage_data/collected=false
+privacy/collected_data/other_usage_data/linked_to_user=false
+privacy/collected_data/other_usage_data/used_for_tracking=false
+privacy/collected_data/other_usage_data/collection_purposes=0
+privacy/collected_data/crash_data/collected=false
+privacy/collected_data/crash_data/linked_to_user=false
+privacy/collected_data/crash_data/used_for_tracking=false
+privacy/collected_data/crash_data/collection_purposes=0
+privacy/collected_data/performance_data/collected=false
+privacy/collected_data/performance_data/linked_to_user=false
+privacy/collected_data/performance_data/used_for_tracking=false
+privacy/collected_data/performance_data/collection_purposes=0
+privacy/collected_data/other_diagnostic_data/collected=false
+privacy/collected_data/other_diagnostic_data/linked_to_user=false
+privacy/collected_data/other_diagnostic_data/used_for_tracking=false
+privacy/collected_data/other_diagnostic_data/collection_purposes=0
+privacy/collected_data/environment_scanning/collected=false
+privacy/collected_data/environment_scanning/linked_to_user=false
+privacy/collected_data/environment_scanning/used_for_tracking=false
+privacy/collected_data/environment_scanning/collection_purposes=0
+privacy/collected_data/hands/collected=false
+privacy/collected_data/hands/linked_to_user=false
+privacy/collected_data/hands/used_for_tracking=false
+privacy/collected_data/hands/collection_purposes=0
+privacy/collected_data/head/collected=false
+privacy/collected_data/head/linked_to_user=false
+privacy/collected_data/head/used_for_tracking=false
+privacy/collected_data/head/collection_purposes=0
+privacy/collected_data/other_data_types/collected=false
+privacy/collected_data/other_data_types/linked_to_user=false
+privacy/collected_data/other_data_types/used_for_tracking=false
+privacy/collected_data/other_data_types/collection_purposes=0
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
