Some changes to export presets

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,7 +3,7 @@
 name="Windows Desktop (x86-64)"
 platform="Windows Desktop"
 runnable=true
-advanced_options=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
@@ -40,10 +40,10 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
+application/company_name="Frederic Vanmol"
 application/product_name="Neuronic Bomberman"
-application/file_description=""
-application/copyright=""
+application/file_description="Neuronic Bomberman"
+application/copyright="Copyright © 2025 by Frederic Vanmol. All rights reserved"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
@@ -101,7 +101,7 @@ application/signature=""
 application/app_category="Games"
 application/short_version=""
 application/version=""
-application/copyright=""
+application/copyright="Copyright © 2025 by Frederic Vanmol. All rights reserved"
 application/copyright_localized={}
 application/min_macos_version_x86_64="10.12"
 application/min_macos_version_arm64="11.00"
